--- a/gos_backend/package.json
+++ b/gos_backend/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "resend": "^4.2.0",
+    "yahoo-finance2": "^2.13.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
