--- a/gos_frontend/package.json
+++ b/gos_frontend/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "recharts": "^2.15.2",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
