--- a/gos_backend/package.json
+++ b/gos_backend/package.json
@@ -27,7 +27,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
