--- a/gos_backend/package.json
+++ b/gos_backend/package.json
@@ -26,9 +26,11 @@
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
     "uuid": "^11.1.0",
-    "yahoo-finance2": "^2.13.3"
+    "mongoose": "^8.13.2",
+    "resend": "^4.2.0",
+    "yahoo-finance2": "^2.13.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
