--- a/gos_backend/package.json
+++ b/gos_backend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -26,9 +27,10 @@
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "uuid": "^11.1.0",
     "mongoose": "^8.13.2",
+    "node-cron": "^3.0.3",
     "resend": "^4.2.0",
+    "uuid": "^11.1.0",
     "yahoo-finance2": "^2.13.3",
     "zod": "^3.24.2"
   },
