--- a/gos_backend/Dockerfile
+++ b/gos_backend/Dockerfile
@@ -1,13 +1,17 @@
+# gos_backend/Dockerfile
 FROM node:22
 
 WORKDIR /app
 
+# copy and install dependencies
 COPY package*.json ./
 
 RUN npm install
 
+# copy rest of backend
 COPY . .
 
-EXPOSE 3000
+EXPOSE 4004
 
+# start dev server
 CMD ["npm", "run", "dev"]
